overflow fixed

--- a/src/stylesheets/emStyle.css
+++ b/src/stylesheets/emStyle.css
@@ -11,6 +11,8 @@
   flex-direction: column;
   align-items: center;
   justify-items: center;
+  width: 100vw;
+  overflow-x: hidden;
 }
 #emBg {
   position: relative;
