--- a/src/stylesheets/mainStyle.css
+++ b/src/stylesheets/mainStyle.css
@@ -29,19 +29,15 @@ body {
   position: fixed;
   transition: all 300ms ease-in-out;
   top: 0px;
-}
-.navBar.animate {
-  top: -75px;
-}
-.navBar.sticky {
-  top: 0px;
   z-index: 99;
+}
+.animateNav {
+  top: -75px;
 }
 
 .sideBar {
   position: fixed;
-  top: 0px;
-  right: 0px;
+  right: -300px;
   height: 100vh;
   max-width: 250px;
   z-index: 9999;
@@ -52,13 +48,10 @@ body {
   justify-content: flex-start;
   backdrop-filter: blur(10px);
   transition: all 300ms ease-in-out;
-}
-.sideBar .animate {
-  right: -250px;
-}
-.sideBar .sticky {
-  right: 0px;
   z-index: 999;
+}
+.animateSide {
+  right: 0px;
 }
 
 #contactButton {
